--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "prettier": "2.2.1",
+    "prettier-config-standard": "^4.0.0",
     "typescript": "4.5.4"
-  }
+  },
+  "prettier": "prettier-config-standard"
 }
