--- a/package.json
+++ b/package.json
@@ -5,21 +5,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "redux": "^4.1.2",
+    "reselect": "^4.1.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
+    "@types/jest": "^27.0.3",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
+    "babel-jest": "^27.4.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
     "prettier": "2.2.1",
     "prettier-config-standard": "^4.0.0",
     "typescript": "4.5.4"
   },
-  "prettier": "prettier-config-standard"
+  "prettier": "prettier-config-standard",
+  "jest": {
+    "verbose": true
+  }
 }
