--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5"
   },
   "devDependencies": {
