--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "recharts": "^2.1.8",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5"
   },
