--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
+    "hsl-to-hex": "^1.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -28,6 +29,7 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/hsl-to-hex": "^1.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
